[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-route-env"
version = "0.1.0"
description = "Safe Route Optimization Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
